#add more section and logic responsive

--- a/src/index.css
+++ b/src/index.css
@@ -244,3 +244,13 @@ p {
 .transition1 {
   transition: all ease 0.7s;
 }
+
+.limit2LineText {
+  display: block;
+  display: -webkit-box;
+  margin: 0 auto;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
