--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ p {
   --bg-inputFocus: #173b45;
   --text-primary: #ffffff;
   --text-primary-hover: #0daf94;
-  --text-secondary: #686f7c;
+  --text-secondary: #808896;
   --bg-gradientChart: linear-gradient(
     286.07deg,
     rgb(77 30 109) 55.21%,
@@ -219,20 +219,13 @@ p {
   opacity: 1;
 }
 
-.btnPrev,
-.btnNext {
-  width: 55px;
-  height: 55px;
-  background: var(--bg-transparent1);
-  display: none;
-  align-items: center;
-  justify-content: center;
-  border-radius: 55px;
-}
-
 .containerSlider:hover .btnPrev,
 .containerSlider:hover .btnNext {
   display: flex;
+}
+
+.transition1 {
+  transition: all ease 0.7s;
 }
 
 .text1Line {
@@ -241,16 +234,16 @@ p {
   text-overflow: ellipsis;
 }
 
-.transition1 {
-  transition: all ease 0.7s;
-}
-
 .limit2LineText {
   display: block;
   display: -webkit-box;
-  margin: 0 auto;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.strokeText {
+  -webkit-text-stroke: 1px var(--text-secondary);
+  font-family: "Roboto", sans-serif;
 }
