--- a/src/index.css
+++ b/src/index.css
@@ -263,7 +263,7 @@ body::-webkit-scrollbar {
   font-family: "Roboto", sans-serif;
 }
 .translateX100 {
-  transform: translateX(120%);
+  transform: translateX(120%) !important;
 }
 .translateX0 {
   transform: translateX(0%) !important;
