--- a/src/index.css
+++ b/src/index.css
@@ -332,3 +332,7 @@ body::-webkit-scrollbar {
 .toastProgress {
   background: #333f48 !important;
 }
+
+.hxdfvhdsf {
+  transform: translateX(50%);
+}
