--- a/src/index.css
+++ b/src/index.css
@@ -177,6 +177,10 @@ body::-webkit-scrollbar {
   color: var(--text-sideBarLeft);
 }
 
+.menuSearch .isActive {
+  border-bottom: 2px solid var(--bg-primary);
+}
+
 /* animation text run */
 .titlePlayControll {
   -webkit-mask-image: linear-gradient(272deg, transparent 0.5%, #000 10%);
